:lipstick: Making signup&login

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
@@ -21,9 +21,9 @@
 
         <button type="submit">Sign Up</button>
     </form>
-    <p>Already have an account? <a href="login.html">Log in here</a></p>
+    <p>Already have an account? <a th:href="@{/login}">Log in here</a></p>
 </div>
 
-<script src="js/signup.js"></script>
+<script th:src="@{/js/signup.js}"></script>
 </body>
 </html>
