--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,23 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body>
 <div class="container">
     <h2>Login</h2>
-    <form id="loginForm">
+    <form action="/login" method="post">
         <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+        <input type="text" id="email" name="username" required> <!-- 필드명 수정 -->
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required>
 
         <button type="submit">Login</button>
     </form>
-    <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
-</div>
 
-<script src="js/login.js"></script>
+    <p>Don't have an account? <a th:href="@{/signup}">Sign up here</a></p>
+</div>
 </body>
 </html>
