:lock: SignUp 성공

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -31,12 +31,13 @@ label {
 }
 
 input {
-    width: 100%;
+    width: calc(100% - 10px);
     padding: 8px;
     margin-top: 5px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    box-sizing: border-box;
 }
 
 button {
