--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홈페이지</title>
     <link rel="stylesheet" th:href="@{/css/homepage.css}">
-    <script defer src="@{/js/home.js}"></script>
+    <script th:src="@{/js/home.js}"></script>
 </head>
 <body>
 <header>
