--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header>
-    <h1>Findable에 오신 것을 환영합니다!</h1>
+    <h1>Welcome to Findable!</h1>
     <nav>
         <ul>
             <li><a href="/home">홈</a></li>
@@ -21,10 +21,10 @@
 </header>
 <main>
     <section class="welcome-message">
-        <p>로그인에 성공하셨습니다. 원하는 콘텐츠를 쉽게 찾고 저장해보세요.</p>
+        <p>원하는 콘텐츠를 쉽게 찾고 저장해보세요.</p>
     </section>
     <section class="features">
-        <div class="feature">
+        <div class="feature" id="saveContentFeature">
             <h2>콘텐츠 저장</h2>
             <p>Instagram, YouTube, 웹사이트 등에서 유용한 콘텐츠를 쉽게 저장하세요.</p>
         </div>
