--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
 </head>
 <body>
 <div class="container">
@@ -27,4 +27,4 @@
     <p>Don't have an account? <a th:href="@{/signup}">Sign up here</a></p>
 </div>
 </body>
-</html>
+</html>"
