:lipstick: edit UI (color issue)

--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -131,7 +131,7 @@ footer {
 
 footer p {
     font-size: 0.9rem;
-    color: #eafaf1; /* 부드러운 연한 초록 */
+    color: #eafaf1; /* 부드러운 연한 초록 //*/
     letter-spacing: 0.5px;
 }
 
