--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
             <h2>콘텐츠 저장</h2>
             <p>Instagram, YouTube, 웹사이트 등에서 유용한 콘텐츠를 쉽게 저장하세요.</p>
         </div>
-        <div class="feature" id="makeTagFeature">
+        <div class="feature">
             <h2>태그 관리</h2>
             <p>저장한 콘텐츠를 태그와 카테고리로 정리하여 효율적으로 관리하세요.</p>
         </div>
