--- a/src/main/resources/templates/search_post.html
+++ b/src/main/resources/templates/search_post.html
@@ -8,9 +8,14 @@
 </head>
 <body>
 <header>
-    <h1>게시물 검색</h1>
+    <h1>게시물 관리</h1>
     <nav>
-        <a href="/post">뒤로가기</a>
+        <ul>
+            <li><a href="/home">홈</a></li>
+            <li><a href="/post">게시물</a></li>
+            <li><a href="/notice">공지사항</a></li>
+            <li><a href="/faq">FAQ</a></li>
+        </ul>
     </nav>
 </header>
 
