--- a/src/main/resources/templates/post.html
+++ b/src/main/resources/templates/post.html
@@ -10,10 +10,12 @@
 <header>
     <h1>게시물 관리</h1>
     <nav>
-        <a href="/home">홈</a>
-        <a href="/post">게시물</a>
-        <a href="/notice">공지사항</a>
-        <a href="/faq">FAQ</a>
+        <ul>
+            <li><a href="/home">홈</a></li>
+            <li><a href="/post">게시물</a></li>
+            <li><a href="/notice">공지사항</a></li>
+            <li><a href="/faq">FAQ</a></li>
+        </ul>
     </nav>
 </header>
 
@@ -21,24 +23,24 @@
     <section class="main-options">
         <!-- 게시물 작성 -->
         <div class="option-card">
-            <a href="/create.html">
-                <img src="/images/create-icon.png" alt="게시물 작성" />
+            <a href="/post/create">
+                <img src="/images/create-icon.png" alt="게시물 작성">
                 <h2>게시물 작성</h2>
                 <p>새로운 게시물을 작성합니다.</p>
             </a>
         </div>
         <!-- 게시물 목록 -->
         <div class="option-card">
-            <a href="/list_post.html">
-                <img src="/images/list-icon.png" alt="게시물 목록" />
+            <a href="/post/list">
+                <img src="/images/list-icon.png" alt="게시물 목록">
                 <h2>게시물 목록</h2>
                 <p>작성된 게시물 목록을 확인합니다.</p>
             </a>
         </div>
         <!-- 게시물 검색 -->
         <div class="option-card">
-            <a href="/search_post.html">
-                <img src="/images/search-icon.png" alt="게시물 검색" />
+            <a href="/post/search">
+                <img src="/images/search-icon.png" alt="게시물 검색">
                 <h2>게시물 검색</h2>
                 <p>키워드를 통해 게시물을 검색합니다.</p>
             </a>
@@ -46,6 +48,8 @@
     </section>
 </main>
 
-<script src="/js/post.js"></script>
+<footer>
+    <p>© 2024 Findable. All rights reserved.</p>
+</footer>
 </body>
 </html>
