:lipstick: add create_post, list_post  UI

--- a/src/main/resources/static/css/list_post.css
+++ b/src/main/resources/static/css/list_post.css
@@ -163,7 +163,7 @@ header nav ul li a:hover {
     background-color: #c9302c;
 }
 
-/* Footer */
+/* Footer // */
 footer {
     background-color: #1d3557;
     color: white;
